# msr

./: .clippy.toml  .codespellignore  .gitignore  .justfile  .pre-commit-config.yaml  .prettierrc.yaml  .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml
.cargo/: config  config.toml
.github/workflows/: build-and-test.yaml  continuous-integration.yaml  pre-commit.yaml  pre-release.yaml  security-audit.yaml
crates/msr/: Cargo.toml
crates/msr-core/: Cargo.toml
crates/msr-core/src/: audit.rs  control.rs  csv_event_journal.rs  journal.rs  lib.rs  measure.rs  register.rs  sync.rs  thread.rs  time.rs
crates/msr-core/src/control/: cyclic.rs  mod.rs
crates/msr-core/src/event_journal/: csv.rs  mod.rs
crates/msr-core/src/fs/: mod.rs
crates/msr-core/src/fs/csv/: mod.rs  tests.rs
crates/msr-core/src/fs/policy/: mod.rs
crates/msr-core/src/io/: mod.rs  tests.rs
crates/msr-core/src/io/file/: csv.rs  mod.rs  policy.rs
crates/msr-core/src/io/file/csv/: mod.rs  tests.rs
crates/msr-core/src/io/file/policy/: mod.rs  tests.rs
crates/msr-core/src/realtime/: mod.rs  processor.rs  tests.rs  worker.rs  worker_thread.rs
crates/msr-core/src/realtime/processing/: mod.rs  processor.rs
crates/msr-core/src/realtime/processing/progress/: mod.rs  tests.rs
crates/msr-core/src/realtime/processing/progresshint/: mod.rs  tests.rs
crates/msr-core/src/realtime/progress_hint/: mod.rs  tests.rs
crates/msr-core/src/realtime/worker/: mod.rs
crates/msr-core/src/realtime/worker/progress/: mod.rs  tests.rs
crates/msr-core/src/realtime/worker/thread/: mod.rs  tests.rs
crates/msr-core/src/realtime/worker_thread/: mod.rs  tests.rs
crates/msr-core/src/register/: mod.rs  recording.rs
crates/msr-core/src/register/recorder/: csv.rs  mod.rs
crates/msr-core/src/storage/: csv.rs  field.rs  mod.rs
crates/msr-core/src/sync/: atomic.rs  mod.rs
crates/msr-core/src/sync/relay/: mod.rs  tests.rs
crates/msr-core/src/sync/signal_latch/: mod.rs  tests.rs
crates/msr-core/src/value/: mod.rs  scalar.rs
crates/msr-core/src/value/scalar/: mod.rs  tests.rs
crates/msr-core/tests/: cyclic_realtime_worker.rs  cyclic_realtime_worker_timing.rs
crates/msr-legacy/: Cargo.toml
crates/msr-legacy/src/: bang_bang.rs  comparison.rs  entities.rs  fsm.rs  lib.rs  parser.rs  pid.rs  runtime.rs  util.rs  value.rs
crates/msr-plugin/: Cargo.toml
crates/msr-plugin-fieldbus-modbus/: Cargo.toml
crates/msr-plugin-fieldbus-modbus/src/: api.rs  internal.rs  lib.rs
crates/msr-plugin/src/: lib.rs
crates/msr/examples/: modbus-tcp-recording.rs
crates/msr/src/: lib.rs
doc/: README.md  book.toml
doc/c4-plantuml/: C4.puml
doc/src/: SUMMARY.md  architecture.md  introduction.md
doc/src/architecture/: components.md  context.md  messaging.md
doc/src/architecture/components/: plugin.md  usecases.md  web.md
plugins/csv-event-journal/: Cargo.toml
plugins/csv-event-journal-msr-plugin/: Cargo.toml
plugins/csv-event-journal-msr-plugin/src/: lib.rs
plugins/csv-event-journal-msr-plugin/src/api/: command.rs  controller.rs  event.rs  mod.rs  query.rs
plugins/csv-event-journal-msr-plugin/src/internal/: context.rs  invoke_context_from_message_loop.rs  invoke_context_from_plugin.rs  message_loop.rs  mod.rs
plugins/csv-event-journal/src/: lib.rs
plugins/csv-event-journal/src/api/: command.rs  event.rs  mod.rs  query.rs
plugins/csv-event-journal/src/internal/: context.rs  invoke_context_from_message_loop.rs  message_loop.rs  mod.rs
plugins/csv-register-recorder/: Cargo.toml
plugins/csv-register-recorder-msr-plugin/: Cargo.toml
plugins/csv-register-recorder-msr-plugin/src/: api.rs  context.rs  lib.rs  register.rs
plugins/csv-register-recorder-msr-plugin/src/api/: command.rs  controller.rs  event.rs  mod.rs  query.rs
plugins/csv-register-recorder-msr-plugin/src/internal/: context.rs  invoke_context_from_message_loop.rs  message_loop.rs  mod.rs  register.rs
plugins/csv-register-recorder-msr-plugin/src/plugin/: handlers.rs  mod.rs
plugins/csv-register-recorder/src/: lib.rs
plugins/csv-register-recorder/src/api/: controller.rs  mod.rs
plugins/csv-register-recorder/src/internal/: context.rs  invoke_context_from_message_loop.rs  message_loop.rs  mod.rs  register.rs
src/: bang_bang.rs  comparison.rs  entities.rs  fsm.rs  lib.rs  parser.rs  pid.rs  runtime.rs  util.rs  value.rs
