[workspace]
members = [
  "crates/*",
  "plugins/*",
]

[patch.crates-io]
msr = { path = "crates/msr" }
msr-core = { path = "crates/msr-core" }
msr-legacy = { path = "crates/msr-legacy" }
msr-plugin = { path = "crates/msr-plugin" }
msr-plugin-csv-event-journal = { path = "plugins/csv-event-journal" }
msr-plugin-csv-register-recorder = { path = "plugins/csv-register-recorder" }
