[workspace]
# https://doc.rust-lang.org/cargo/reference/resolver.html#resolver-versions
# > If using a virtual workspace, the version should be specified in the [workspace] table
resolver = "2"

members = [
  "crates/*",
  "plugins/*",
]

[workspace.package]
version = "0.3.6"
homepage = "https://github.com/slowtec/msr"
repository = "https://github.com/slowtec/msr"
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.70"

[patch.crates-io]
msr = { path = "crates/msr" }
msr-core = { path = "crates/msr-core" }
msr-legacy = { path = "crates/msr-legacy" }
msr-plugin = { path = "crates/msr-plugin" }
msr-plugin-csv-event-journal = { path = "plugins/csv-event-journal" }
msr-plugin-csv-register-recorder = { path = "plugins/csv-register-recorder" }
