[package]
version = "0.2.0"
name = "msr-legacy"
description = "Industrial Automation Toolbox - Legacy"
license = "MIT/Apache-2.0"
edition = "2021"
# Reserved for internal use and migration purposes
publish = false

[dependencies]
serde = { version = "1.0.145", features = ["derive"], optional = true }

[features]
default = ["serde"]

[dev-dependencies]
serde_json = "1.0.86"
