[package]
name = "msr-plugin"
description = "Industrial Automation Toolbox - Plugin foundation"
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
log = "0.4.20"
thiserror = "1.0.48"
tokio = { version = "1.32.0", default-features = false, features = ["sync"] }

# Workspace dependencies
msr-core = "=0.3.6"
