[package]
name = "msr"
description = "Industrial Automation Toolbox"
keywords = ["automation", "control", "plc", "msr", "fieldbus"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
# Workspace dependencies
msr-core = "=0.3.4"
msr-plugin = { version = "=0.3.4", optional = true }

[features]
default = []
plugin = ["msr-plugin"]

[dev-dependencies]
anyhow = "1.0.65"
env_logger = "0.9.1"
log = "0.4.17"
tokio = { version = "1.21.1", features = ["full"] }

# Workspace dev-dependencies
msr-plugin = "=0.3.4"
