[package]
name = "msr"
description = "Industrial Automation Toolbox"
keywords = ["automation", "control", "plc", "msr", "fieldbus"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
# Workspace dependencies
msr-core = "=0.3.6"
msr-plugin = { version = "=0.3.6", optional = true }

[features]
default = []
plugin = ["msr-plugin"]

[dev-dependencies]
anyhow = "1.0.71"
env_logger = "0.10.0"
log = "0.4.19"
tokio = { version = "1.28.2", features = ["full"] }

# Workspace dev-dependencies
msr-plugin = "=0.3.6"
