[package]
name = "csv-event-journal-msr-plugin"
version = "0.0.0"
description = "Industrial Automation Toolbox - CSV Event Journal Plugin"
authors = ["slowtec GmbH <post@slowtec.de>"]
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
log = "0.4"
thiserror = "1"
tokio = { version = "*", default_features = false, features = ["rt-multi-thread", "sync"] }

# Workspace dependencies
msr-core = { version = "*", default_features = false, features = ["csv-event-journal"] }
msr-plugin = "*"
