[package]
name = "msr-plugin-csv-event-journal"
description = "Industrial Automation Toolbox - CSV Event Journal Plugin"
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.70"
log = "0.4.17"
thiserror = "1.0.40"
tokio = { version = "1.27.0", default-features = false, features = ["rt-multi-thread", "sync"] }

# Workspace dependencies
msr-core = { version = "=0.3.6", features = ["csv-event-journal"] }
msr-plugin = "=0.3.6"
