[package]
name = "csv-register-recorder-msr-plugin"
version = "0.0.0"
description = "slowtec Industrial Automation Runtime - CSV Register Recorder Plugin"
authors = ["slowtec GmbH <post@slowtec.de>"]
edition = "2021"
publish = false

[dependencies]
anyhow = "*"
bs58 = "*"
log = "*"
thiserror = "*"
tokio = { version = "*", default-features = false, features = ["rt-multi-thread"] }

# Workspace dependencies
msr-core = { version = "*", default-features = false, features = ["csv-register-recorder"] }
msr-plugin = "*"
