[package]
name = "csv-register-recorder-msr-plugin"
version = "0.0.0"
description = "slowtec Industrial Automation Runtime - CSV Register Recorder Plugin"
authors = ["slowtec GmbH <post@slowtec.de>"]
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
bs58 = { version = "0.4", default-features = false }
log = "0.4"
thiserror = "1"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread"] }

# Workspace dependencies
msr-core = { version = "*", default-features = false, features = ["csv-register-recorder"] }
msr-plugin = "*"
