[package]
name = "msr-plugin-csv-register-recorder"
description = "slowtec Industrial Automation Runtime - CSV Register Recorder Plugin"
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.69"
bs58 = { version = "0.4.0", default-features = false, features = ["std"] }
log = "0.4.17"
thiserror = "1.0.39"
tokio = { version = "1.26.0", default-features = false, features = ["rt-multi-thread"] }

# Workspace dependencies
msr-core = { version = "=0.3.6", features = ["csv-register-recorder"] }
msr-plugin = "=0.3.6"
