[package]
name = "msr-plugin-csv-register-recorder"
description = "slowtec Industrial Automation Runtime - CSV Register Recorder Plugin"
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.71"
bs58 = { version = "0.5.0", default-features = false, features = ["std"] }
log = "0.4.19"
thiserror = "1.0.40"
tokio = { version = "1.28.2", default-features = false, features = ["rt-multi-thread"] }

# Workspace dependencies
msr-core = { version = "=0.3.6", features = ["csv-register-recorder"] }
msr-plugin = "=0.3.6"
